libtesseract_la_SOURCES += \
    textord/alignedblob.h \
    textord/baselinedetect.h \
    textord/bbgrid.h \
    textord/blkocc.h \
    textord/blobgrid.h \
    textord/ccnontextdetect.h \
    textord/cjkpitch.h \
    textord/colfind.h \
    textord/colpartition.h \
    textord/colpartitionset.h \
    textord/colpartitiongrid.h \
    textord/devanagari_processing.h \
    textord/drawedg.h \
    textord/drawtord.h \
    textord/edgblob.h \
    textord/edgloop.h \
    textord/equationdetectbase.h \
    textord/fpchop.h \
    textord/gap_map.h \
    textord/imagefind.h \
    textord/linefind.h \
    textord/makerow.h \
    textord/oldbasel.h \
    textord/pithsync.h \
    textord/pitsync1.h \
    textord/scanedg.h \
    textord/sortflts.h \
    textord/strokewidth.h \
    textord/tabfind.h \
    textord/tablefind.h \
    textord/tabvector.h \
    textord/tablerecog.h \
    textord/textlineprojection.h \
    textord/textord.h \
    textord/topitch.h \
    textord/tordmain.h \
    textord/tovars.h \
    textord/underlin.h \
    textord/wordseg.h \
    textord/workingpartset.h

libtesseract_la_SOURCES += \
    textord/alignedblob.cpp \
    textord/baselinedetect.cpp \
    textord/bbgrid.cpp \
    textord/blkocc.cpp \
    textord/blobgrid.cpp \
    textord/ccnontextdetect.cpp \
    textord/cjkpitch.cpp \
    textord/colfind.cpp \
    textord/colpartition.cpp \
    textord/colpartitionset.cpp \
    textord/colpartitiongrid.cpp \
    textord/devanagari_processing.cpp \
    textord/drawedg.cpp \
    textord/drawtord.cpp \
    textord/edgblob.cpp \
    textord/edgloop.cpp \
    textord/equationdetectbase.cpp \
    textord/fpchop.cpp \
    textord/gap_map.cpp \
    textord/imagefind.cpp \
    textord/linefind.cpp \
    textord/makerow.cpp \
    textord/oldbasel.cpp \
    textord/pithsync.cpp \
    textord/pitsync1.cpp \
    textord/scanedg.cpp \
    textord/sortflts.cpp \
    textord/strokewidth.cpp \
    textord/tabfind.cpp \
    textord/tablefind.cpp \
    textord/tabvector.cpp \
    textord/tablerecog.cpp \
    textord/textlineprojection.cpp \
    textord/textord.cpp \
    textord/topitch.cpp \
    textord/tordmain.cpp \
    textord/tospace.cpp \
    textord/tovars.cpp \
    textord/underlin.cpp \
    textord/wordseg.cpp \
    textord/workingpartset.cpp

